tests/expected_failures/empty_prefix.stderr
error: `#[gflags(prefix=...)]` expects a non-empty quoted string
 --> $DIR/empty_prefix.rs:5:17
  |
5 | #[gflags(prefix="")]
  |                 ^^
